--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -7,6 +7,8 @@
     <string name="user_name">用户名</string>
     <string name="user_password">密码</string>
     <string name="login_status_error">账号或密码错误</string>
+    <string name="action_search">搜索</string>
+    <string name="action_settings">设置</string>
 </resources>
 
 
